# sherlock

./: .env.example  .gitignore  LICENSE  LINKEDIN_POST.md  QA_AGENT_README.md  QA_ENHANCEMENTS.md  README.md  credentials.json.template  main.py  pyproject.toml  requirements.txt
notebooks/: argdown.txt  argdown_park.txt  qa_demo.ipynb  testing.ipynb
sherlock/: agents.py  evidence_store.py  gmail.py  logger_config.py  models.py  utils.py
